--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  user: postgres
-  host: localhost
-  password: brian
-  port: 5432
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
